examples/test/testpolicy18490.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18490
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key28: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value45
          key17: value13
      podSelector:
        matchLabels:
          key21: value28
          key15: value8
